cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(MY_GRAND_PROJECT)
set(PCL_DIR "/project/nearsdc/software/pcl/install/share/pcl-1.6")
find_package(PCL 1.5 REQUIRED COMPONENTS)
include_directories(${PCL_INCLUDE_DIRS})
link_directories(${PCL_LIBRARY_DIRS})
add_definitions(${PCL_DEFINITIONS})
add_executable(reconstruct reconstruct.cpp)
target_link_libraries(reconstruct ${PCL_LIBRARIES})
add_executable(reconstruct1 reconstruct1.cpp)
target_link_libraries(reconstruct1 ${PCL_LIBRARIES})
add_executable(reconstruct2 reconstruct2.cpp)
target_link_libraries(reconstruct2 ${PCL_LIBRARIES})
add_executable(reconstruct3 reconstruct3.cpp)
target_link_libraries(reconstruct3 ${PCL_LIBRARIES})
